@@ -1,34 +1,37 @@
 package sgms.dao;
 
-import java.nio.file.Path;
+import java.io.IOException;
+import java.io.InputStream;
+import java.nio.file.*;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.SQLException;
 
-/**
- * Opens a connection to our MS Access database using UCanAccess. We build an
- * absolute file path so it works on any computer.
- */
 public final class DB {
+    private DB() {}
 
-    private DB() {
-        // utility class: do not make objects of this
-    }
-
-    /**
-     * Make and return a new database connection.
-     *
-     * @return open JDBC connection
-     * @throws SQLException if the connection fails
-     */
     public static Connection get() throws SQLException {
-        // Make the path absolute so it doesn't depend on the working folder.
-        Path db = Path.of("src", "sgms", "data", "School.accdb").toAbsolutePath();
+        // 1) Writable location for the runtime DB (per-user)
+        Path appDir = Paths.get(System.getProperty("user.home"), ".sgms");
+        Path dbPath = appDir.resolve("School.accdb");
 
-        // Build the UCanAccess URL from the file path.
-        String url = "jdbc:ucanaccess://" + db.toString();
+        // 2) Ensure folder exists and extract the embedded DB if missing/empty
+        try {
+            Files.createDirectories(appDir);
+            if (Files.notExists(dbPath) || Files.size(dbPath) == 0) {
+                try (InputStream in = DB.class.getResourceAsStream("/sgms/data/School.accdb")) {
+                    if (in == null) throw new IllegalStateException(
+                        "Embedded DB not found at /sgms/data/School.accdb inside the JAR");
+                    Files.copy(in, dbPath, StandardCopyOption.REPLACE_EXISTING);
+                }
+            }
+        } catch (IOException e) {
+            throw new SQLException("Failed to prepare DB at " + dbPath, e);
+        }
 
-        // Connect and return.
+        // 3) UCanAccess JDBC URL -> always a REAL file path
+        String url = "jdbc:ucanaccess://" + dbPath
+                   + ";memory=false;immediatelyReleaseResources=true";
         return DriverManager.getConnection(url);
     }
 }
